--- a/style/dashboard.css
+++ b/style/dashboard.css
@@ -42,6 +42,7 @@ body {
       display: flex;
       justify-content:space-between;
       align-items:center;
+
       & p{
         font-size: 30px;
          font-weight: bold;
@@ -88,6 +89,7 @@ body {
             color: rgb(47, 122, 192);
         }
         & section{
+            background:linear-gradient(64deg,white,wheat,white);
             padding: 15px;
             & .sign{
                 /* background-color: red; */
@@ -98,12 +100,35 @@ body {
                     width: 90px;
                 }
             }
-            background:linear-gradient(64deg,white,wheat,white);
+        }
+        & .msg2{
+          & i{
+            font-size: 20px;
+            font-weight: bold;
+          }
+          & h2{
+            font-size: 22px;
+          }
+          & ul{
+
+            /* background: rebeccapurple; */
+            padding:20px;
+            text-align: justify;
+            display: flex;
+            justify-content: center;
+            align-items: start;
+            flex-direction: column;
+            gap:9px;
+            & li{
+              font-family: "Kalam", cursive;
+              font-weight: bold;
+            }
+          }
         }
     }
-    & .p-a{
+    /* & .p-a{
         font-weight: bold;
-    }
+    } */
     & #moduleList{
         /* background: red; */
         width: 90%;
@@ -124,15 +149,16 @@ body {
         }
     }
     & #continueButton{
-      
       padding: 9px;
+      background: rgb(47, 122, 192);
       background: linear-gradient(to right,rgb(55, 138, 106),rgb(105, 170, 88));
       border-radius:10px;
       color: rgb(250, 250, 250);
       display: flex;
       justify-content: center;
       align-items: center;
-      border: none;
+      box-shadow: 2px 3px 9px rgba(56, 56, 56, 0.438);
+      border:none;
       height: 40px;
       font-size: 20px;
     }
