--- a/style/user.css
+++ b/style/user.css
@@ -109,7 +109,6 @@ body {
       overflow-y: scroll;
       z-index: 111;
       transition: right 0.3s ease;
-
       background-color: #ffffff;
       border-radius: 8px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.459);
@@ -129,7 +128,7 @@ body {
             color: #dcd4ff;
             margin-bottom: 10px;
             /* border: 2px solid rgb(17, 70, 65); */
-            background: linear-gradient(120deg,rgb(25, 11, 37),rgb(84, 69, 151));
+            background: linear-gradient(120deg,#190b25,#544597);
             border-radius: 30px;
             padding-left: 10px;
             padding-top: 5px;
@@ -146,6 +145,7 @@ body {
           margin: 8px 0;
           border: 2px dotted rgb(120, 135, 223);
           background: rgb(244, 239, 255);
+       
           /* box-shadow: 0px 1px 8px rgb(106, 152, 221); */
           padding: 5px;
           height: 80px;
