--- a/style/dashboard.css
+++ b/style/dashboard.css
@@ -17,6 +17,12 @@ body {
   align-items: center;
   flex-direction: column;
   text-align: justify;
+  background: radial-gradient(
+    circle,
+    rgb(202, 169, 129) 20%,   /* Soft orange */
+    rgb(199, 139, 221) 50%, /* Vibrant violet */
+    rgb(177, 147, 238) 100% /* Modern purple */
+  );
   & .container {
     /* background: red; */
     max-height: 90%;
