--- a/style/home.css
+++ b/style/home.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans+Devanagari:wght@100..900&family=Unkempt:wght@400;700&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -16,6 +18,12 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  background: radial-gradient(
+  circle,
+  rgb(224, 187, 141) 20%,   /* Soft orange */
+  rgb(220, 131, 250) 50%, /* Vibrant violet */
+  rgb(139, 87, 241) 100% /* Modern purple */
+);
 
   & .container {
     max-width: 420px;
@@ -29,6 +37,20 @@ body {
     gap: 20px;
     /* border: 5px rgb(0, 0, 0) solid; */
     border-radius: 50px;
+    & p{
+      /* border: 1px solid black; */
+      margin-bottom: -1rem;
+      font-size: 50px;
+      font-weight: bold;
+      font-family: 'Kalam', cursive;
+      color: rgb(51, 51, 122);
+    }
+    & .logo{
+      width:200px;
+      aspect-ratio: 1;
+      border-radius:10%;
+      object-fit:cover;
+    }
     & input,
     button {
       width: 300px;
@@ -36,22 +58,25 @@ body {
       border-radius: 9.5px;
       padding-left: 5px;
       font-size: 1.1em;
-      border: 3.5px solid black;
+      border: 2px solid rgb(158, 91, 221);
       outline: none;
     }
-
+    
     & button {
       width: 150px;
       cursor: pointer;
+      border: 1px solid rgb(151, 81, 218);
+      color: rgb(255, 255, 255);
+      background: linear-gradient(125deg, rgb(130, 85, 173) 10%, rgb(193, 123, 214) 60%, rgb(134, 89, 177) 90%);
     }
 
     & .hr {
       width: 100%;
       height: 1px;
-      background: rgb(224, 222, 222);
-      box-shadow: 1px 1px 5px 1px rgb(206, 203, 203);
+      background: rgb(140, 100, 185);
+      box-shadow: 1px 1px 5px 1px rgb(122, 88, 214);
       border-radius: 50%;
-      margin: 20px 0;
+      /* margin: 20px 0; */
     }
   }
 }
