--- a/style/dashboard.css
+++ b/style/dashboard.css
@@ -11,7 +11,7 @@
 body {
   width: 100%;
   height: 100%;
-  min-height: 100vh;
+  /*min-height: 100vh; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -28,8 +28,8 @@ body {
     max-height: 90%;
     min-height: 100vh;
 
-    max-width: 420px;
-    min-width: 100px;
+    /* min-width: 100px; */
+    max-width: 360px;
 
     display: flex;
     flex-direction: column;
